edited api controller and created parseMenu.js

--- a/views/weekly-menu.ejs
+++ b/views/weekly-menu.ejs
@@ -16,7 +16,7 @@
 <body>
     <div id="app">
     </div>
-    <script type="text/javascript" src="/assets/build/index.transformed.js"></script>
+    <script type="text/javascript" src="/assets/build/weeklyMenu.transformed.js"></script>
 </body>
 
 </html>
