Added links to navigate between weekly and daily menu

--- a/views/daily-menu.ejs
+++ b/views/daily-menu.ejs
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <a href="/weekly-menu">Weekly menu</a>
     <div id="app">
     </div>
     <script type="text/javascript" src="/assets/build/dailyMenu.transformed.js"></script>
