--- a/views/weekly-menu.ejs
+++ b/views/weekly-menu.ejs
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <a href="/daily-menu">Daily menu</a>
     <div id="app">
     </div>
     <script type="text/javascript" src="/assets/build/weeklyMenu.transformed.js"></script>
