Changed so that there are no two different routes for daily/weekly menu: react chooses which one to show

--- a/views/daily-menu.ejs
+++ b/views/daily-menu.ejs
@@ -10,13 +10,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
         crossorigin="anonymous" />
-
 </head>
 
 <body>
-    <a href="/weekly-menu">Weekly menu</a>
-    <div id="app">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <a href="/weekly-menu" style="float: right">Weekly menu</a>
+            </div>
+        </div>
+        <main id="app">
+        </main>
     </div>
+
     <script type="text/javascript" src="/assets/build/dailyMenu.transformed.js"></script>
 </body>
 
