Added some style and did some refactoring

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -10,20 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
         crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+
 </head>
 
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <a href="/weekly-menu" style="float: right">Weekly menu</a>
-            </div>
-        </div>
-        <main id="app">
-        </main>
+<body style="background-image: url(https://designmodo.com/wp-content/uploads/2015/10/food-icons.jpg); font-family: 'Roboto', sans-serif;">
+    <div id="app">
     </div>
-
-    <script type="text/javascript" src="/assets/build/dailyMenu.transformed.js"></script>
+    <script type="text/javascript" src="/assets/build/menu.transformed.js"></script>
 </body>
 
 </html>
