--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <title>Kumpula Cafe</title>
-    <link rel="shortcut icon" href="https://lh5.ggpht.com/u4Ll96o2ergbtR8JAMuUXd3YGJe7EkMf3SBJ1TkaQi5L9roxdvhKqwJ3V99FFEnHwg=h900"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="shortcut icon" href="https://lh5.ggpht.com/u4Ll96o2ergbtR8JAMuUXd3YGJe7EkMf3SBJ1TkaQi5L9roxdvhKqwJ3V99FFEnHwg=h900"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
         crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="/assets/style/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
 
 </head>
@@ -17,6 +16,7 @@
 <body style="background-image: url(https://designmodo.com/wp-content/uploads/2015/10/food-icons.jpg); font-family: 'Roboto', sans-serif;">
     <div id="app">
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
     <script type="text/javascript" src="/assets/build/menu.transformed.js"></script>
 </body>
 
