--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -13,7 +13,7 @@
 
 </head>
 
-<body style="background-image: url(https://designmodo.com/wp-content/uploads/2015/10/food-icons.jpg); font-family: 'Roboto', sans-serif;">
+<body style="background-image: url(/assets/images/food.jpg); font-family: 'Roboto', sans-serif;">
     <div id="app">
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
