--- a/public/style/style.css
+++ b/public/style/style.css
@@ -43,3 +43,13 @@ fieldset[disabled] .btn-sample.active {
   color: #FFDA33; 
   background-color: #FFFFFF; 
 }
+
+myButton {
+    background: none !important;
+    color: inherit;
+    border: none;
+    padding: 0! important;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit !important;
+}
